--- a/full-values.yaml
+++ b/full-values.yaml
@@ -77,6 +77,7 @@ images:
 #    repository: voltha/voltha-rw-core
 #    tag: 2.1.1
 
+# Customization for ONOS
 onos_env:
 - name: POD_IP
   valueFrom:
@@ -88,6 +89,9 @@ onos_env:
     fieldPath: metadata.namespace
 - name: ONOS_APPS
   value: "drivers,openflow-base,hostprovider"
+
+kafka_logging:
+  brokers: ['voltha-kafka.voltha.svc:9092']
 
 # Customization for BBSIM
 kafka_broker: 'voltha-kafka.voltha.svc.cluster.local:9092'
